# scheduler

./: .gitignore  PLAN.md  README.md  RELEASE_NOTES_v0.1.0.md  pyproject.toml
_wheels/: sqlalchemy-2.0.48-cp310-cp310-win_amd64.whl  sqlalchemy-2.0.48-cp312-cp312-win_amd64.whl  sqlalchemy-2.0.48-cp39-cp39-win_amd64.whl  tomli-2.4.0-cp311-cp311-win_amd64.whl  tomli-2.4.0-cp313-cp313-win_amd64.whl
scheduler/: __init__.py  cli.py  config.py  constants.py  db.py  logging_utils.py  models.py  repositories.py  utils.py  web_app.py
scheduler/services/: auth_service.py  email_service.py  progress_service.py  project_service.py  reminder_service.py  report_dispatch_service.py  report_service.py
scheduler/templates/: daily_report.md.j2  monthly_report.md.j2  weekly_report.md.j2
scheduler/web_static/: index.html
scripts/: build_windows_wheels.bat  deploy_windows.bat  install_cron.sh  start_windows.bat  uninstall_cron.sh  upgrade.sh  upgrade_windows.bat  windows_runtime_requirements.txt
tests/: conftest.py  helpers.py  test_cli_web.py  test_progress.py  test_reminders.py  test_report_and_email.py  test_web_api.py
