[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-scheduler-cli"
version = "0.1.0"
description = "Project scheduling and milestone tracking CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12.3,<0.13",
  "click>=8.1.8,<8.2",
  "SQLAlchemy>=2.0.30,<2.1",
  "Jinja2>=3.1.4,<3.2",
  "markdown-it-py>=3.0.0,<5",
  "python-docx>=1.1.0,<1.3",
  "fastapi>=0.110.0,<0.116.0",
  "uvicorn>=0.30.0,<0.36.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9",
  "httpx>=0.27.0,<1",
]

[project.scripts]
scheduler = "scheduler.cli:app"

[tool.setuptools.packages.find]
include = ["scheduler*"]

[tool.setuptools.package-data]
scheduler = ["templates/*.j2", "web_static/*.html"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
